TEST_PROGRAMS/INVALID/03/invalid_if3.go
package main
func main() {
	if x + y {
	        // statements
	} else if x {

	} else {

	}
	if x:=5; x:=5; x{
		
	}
}
